--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "keywords": [
     "dotlang",
     ".lang",
-    "yua",
-    "cherryblossomtavern"
+    "nobu"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CherryBlossomTavern/dotlang.git"
+    "url": "git+https://github.com/NobUwU/dotlang.git"
   },
   "bugs": {
-    "url": "https://github.com/CherryBlossomTavern/dotlang/issues"
+    "url": "https://github.com/NobUwU/dotlang/issues"
   },
-  "homepage": "https://github.com/CherryBlossomTavern/dotlang#readme"
+  "homepage": "https://github.com/NobUwU/dotlang#readme"
 }
